--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,22 @@
 </head>
 <body>
 
+  <div class="jumbotron">
+    <div class="container text-center">
+      <h1><%= title %></h1>
+      <p>kindly upload the input data to calculate reward point</p>
+     </div>
+  </div>
+
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+
+      </div>
+    </div>
+  </nav>
+
+  
 </body>
 </html>
 
